--- a/package.json
+++ b/package.json
@@ -38,15 +38,16 @@
   "devDependencies": {
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^15.0.7",
+    "@testing-library/jest-dom": "6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
-    "jest": "^27.5.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^9.5.14",
     "react-test-renderer": "^18.3.1",
