--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -27,9 +27,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout master branch
-      - uses: actions/checkout@main
+        uses: actions/checkout@main
+      
       - name: Merge develop -> main
-      - uses: devmasx/merge-branch@v1.3.1
+        uses: devmasx/merge-branch@v1.3.1
         with:
           type: now
           from_branch: develop
