--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -32,9 +32,10 @@ jobs:
           fetch-depth: 0 # Необходимо для полной истории коммитов
 
       - name: Merge develop into main
-        uses: devmasx/merge-branch@v1.3.1
+        uses: devmasx/merge-branch@1.4.0
         with:
+          type: now
           from_branch: develop
           target_branch: main
-          allow_ff: false # Отключает fast-forward merge
+          message: Merge develop into main
           github_token: ${{ secrets.GITHUB_TOKEN }}
